# NeVehicleLicensePlateRecognition

./: AnnPredict.cpp  AnnPredict.h  CMakeLists.txt  ColorLocate.cpp  ColorLocate.h  NeVehicleLicensePlateRecognition.cpp  NeVehicleLicensePlateRecognition.h  PlateLocate.cpp  PlateRecognize.cpp  README.md  SobelLocate.cpp  SobelLocate.h  SvmPredict.cpp  SvmPredict.h  plateLocate.h  plateRecognize.h
ann_train/: CMakeLists.txt  ann_train.cpp  ann_train.h  utils.cpp  utils.h
resources/: ann.xml  ann_zh.xml  字符序列.txt
svm_train/: CMakeLists.txt  svm_train.cpp  svm_train.h
